--- a/D5/svm.tex
+++ b/D5/svm.tex
@@ -42,7 +42,7 @@ The Multidimensional Scaling (MDS) plot below visualizes the decision boundaries
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{Imatges/plot_mds-1.png} % Ensure this image exists
+    \includegraphics[width=1.0\textwidth]{Images/plot_mds-1.png} % Ensure this image exists
     \caption{SVM Classification Visualization (MDS Projection)}
     \label{fig:svm_mds}
 \end{figure}
@@ -51,7 +51,7 @@ The ROC Curve confirms the model's performance, showing a good trade-off between
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{Imatges/plot_roc-1.png} % Ensure this image exists
+    \includegraphics[width=1.0\textwidth]{Images/plot_roc-1.png} % Ensure this image exists
     \caption{ROC Curve for SVM Binary Classification}
     \label{fig:svm_roc}
 \end{figure}
@@ -84,7 +84,7 @@ The regression model achieved an \textbf{$R^2$ of 0.8084}, explaining approximat
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{Imatges/plot_residuals-1.png} % Ensure this image exists
+    \includegraphics[width=1.0\textwidth]{Images/plot_residuals-1.png} % Ensure this image exists
     \caption{Income Prediction: Predicted vs Real and Residuals}
     \label{fig:svm_residuals}
 \end{figure}
@@ -96,7 +96,7 @@ To understand the drivers behind the SVM's decisions, we analyzed the relationsh
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{Imatges/plot_boxplots-1.png} % Ensure this image exists
+    \includegraphics[width=1.0\textwidth]{Images/plot_boxplots-1.png} % Ensure this image exists
     \caption{Key Drivers: Income and Recency vs Response}
     \label{fig:svm_boxplots}
 \end{figure}
