Refactor Naive Bayes R Markdown for clarity
Updated Naive Bayes R Markdown document to improve clarity and structure. Enhanced comments and visualizations for better understanding of model performance.

--- a/D5/Discriminant Models/Naive_bayes.rmd
+++ b/D5/Discriminant Models/Naive_bayes.rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 )
 ```
 # This script implements and evaluates the Naive Bayes classifier 
-# to predict the CustomerSegment (cluster membership).
+# to predict the Response variable.
 
 ```{r}
 library(readr)
